fix routes and views

--- a/views/items.html.twig
+++ b/views/items.html.twig
@@ -20,7 +20,7 @@
 
             <button type='submit'>Add item</button>
         </form>
-        <form action='/delete_items' method='post'>
+        <form action='/delete' method='post'>
             <button type='submit'>delete</button>
         </form>
     </body>
