--- a/views/created_item.html.twig
+++ b/views/created_item.html.twig
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>You created an item!</h1>
-        <p>{{ newitem.getDescription }}</p>
+        <p>{{ new_item.getDescription }}</p>
         <p><a href='/'>View your items.</a></p>
     </body>
 </html>
